--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,8 +1,17 @@
 @import "fonts";                                                                 
 @import "base";                      
-@import "menu";                                                       
+@import "menu";              
 @import "home";
+@import "localizacao";
+@import "terrenos";                            
+
+                                        
+                                                                                                                  
+                                
+
+
+
 @import "contato";                         
 @import "footer";                                                           
 @import "politica";                                                                                                                                                                                                                                 
-        
+            
