--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,15 +1,13 @@
 .menu {
   width: 100%;
   position: fixed;
-  background-color: #000000;
+  background-color: #ffffff;
   border-color: transparent;
   min-height: auto;
   margin-bottom: 0px;
   border: 0px solid transparent;
-  z-index: 200;
+  z-index: 300;
   border-radius: 0px;
-  padding-top: 5px;
-  padding-bottom: 5px;
 }
 
 .menu .navbar-brand {
@@ -18,38 +16,24 @@
 }
 
 .menu .navbar-right {
-  padding: 10px 30px;
+  padding: 13px 0px;
 }
 
 .menu .navbar-right li > a {
-  font-size: 15px;
-  line-height: 15px;
-  color: #fff;
+  font-size: 12px;
+  line-height: 12px;
+  color: #536a8e;
   text-transform: uppercase;
-  font-family: 'Montserrat';
-  font-weight: 500;
+  font-family: 'Helvetica Neue LT Std';
+  font-weight: bold;
   font-style: normal;
-}
-
-.menu .navbar-right li > a::after {
-  content: "\2219";
-  color: #ee6a01;
-  font-size: 50px;
-  position: absolute;
-  right: -8px;
-}
-
-.menu .navbar-right li:last-child a {
-  border-right: solid 0px transparent;
-}
-
-.menu .navbar-right li:last-child a::after {
-  content: "";
+  letter-spacing: 2px;
+  outline: none;
 }
 
 .menu .navbar-right li > a:focus,
 .menu .navbar-right li > a:hover {
-  color: #ee6a01;
+  color: #f36e3c;
 }
 
 .navbar-toggle {
@@ -92,17 +76,18 @@
             box-shadow: none;
   }
   .menu .navbar-right li > a {
-    border-bottom: solid 1px #ee6a01;
-  }
-  .menu .navbar-right li:last-child a {
-    border-bottom: solid 0px transparent;
-  }
-  .menu .navbar-right li > a::after {
-    content: "";
+    border-bottom: solid 1px #f36e3c;
+    padding-top: 14px;
   }
 }
 
 /* Small */
+@media (min-width: 768px) and (max-width: 991px) {
+  .menu .navbar-right li > a {
+    padding: 15px 5px;
+  }
+}
+
 /* Medium */
 /* Large */
 /*# sourceMappingURL=menu.css.map */
