--- a/assets/css/menu.scss
+++ b/assets/css/menu.scss
@@ -1,15 +1,13 @@
 .menu {
     width: 100%;
     position: fixed;
-    background-color: #000000;
+    background-color: #ffffff;
     border-color: transparent;
     min-height: auto;
     margin-bottom: 0px;
     border: 0px solid transparent;
-    z-index: 200;
+    z-index: 300;
     border-radius: 0px;
-    padding-top: 5px;
-    padding-bottom: 5px;
 
     .navbar-brand {
         height: auto;
@@ -17,37 +15,23 @@
     }
 
     .navbar-right {
-        padding: 10px 30px;
+        padding: 13px 0px;
 
         li>a {
-            font-size: 15px;
-            line-height: 15px;
-            color: #fff;
+            font-size: 12px;
+            line-height: 12px;
+            color: #536a8e;
             text-transform: uppercase;
-            font-family: 'Montserrat';
-            font-weight: 500;
+            font-family: 'Helvetica Neue LT Std';
+            font-weight: bold;
             font-style: normal;
-        }
-
-        li>a::after {
-            content: "\2219";
-            color: #ee6a01;
-            font-size: 50px;
-            position: absolute;
-            right: -8px;
-        }
-
-        li:last-child a {
-            border-right: solid 0px transparent;
-        }
-
-        li:last-child a::after {
-            content: "";
+            letter-spacing: 2px;
+            outline: none;
         }
 
         li>a:focus,
         li>a:hover {
-            color: #ee6a01;
+            color: #f36e3c;
         }
     }
 }
@@ -97,23 +81,21 @@
         }
 
         .navbar-right li>a {
-            border-bottom: solid 1px #ee6a01;
+            border-bottom: solid 1px #f36e3c;
+            padding-top: 14px;
         }
-
-        .navbar-right li:last-child a {
-            border-bottom: solid 0px transparent;
-        }
-
-        .navbar-right li>a::after {
-            content: "";
-        }
-
     }
 
 }
 
 /* Small */
-@media(min-width:768px) and (max-width:991px) {}
+@media(min-width:768px) and (max-width:991px) {
+    .menu {
+        .navbar-right li>a {
+            padding: 15px 5px;
+        }
+    }
+}
 
 /* Medium */
 @media(min-width:992px) and (max-width:1199px) {}
