--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -498,15 +498,13 @@ p {
 .menu {
   width: 100%;
   position: fixed;
-  background-color: #000000;
+  background-color: #ffffff;
   border-color: transparent;
   min-height: auto;
   margin-bottom: 0px;
   border: 0px solid transparent;
-  z-index: 200;
+  z-index: 300;
   border-radius: 0px;
-  padding-top: 5px;
-  padding-bottom: 5px;
 }
 
 .menu .navbar-brand {
@@ -515,38 +513,24 @@ p {
 }
 
 .menu .navbar-right {
-  padding: 10px 30px;
+  padding: 13px 0px;
 }
 
 .menu .navbar-right li > a {
-  font-size: 15px;
-  line-height: 15px;
-  color: #fff;
+  font-size: 12px;
+  line-height: 12px;
+  color: #536a8e;
   text-transform: uppercase;
-  font-family: 'Montserrat';
-  font-weight: 500;
+  font-family: 'Helvetica Neue LT Std';
+  font-weight: bold;
   font-style: normal;
-}
-
-.menu .navbar-right li > a::after {
-  content: "\2219";
-  color: #ee6a01;
-  font-size: 50px;
-  position: absolute;
-  right: -8px;
-}
-
-.menu .navbar-right li:last-child a {
-  border-right: solid 0px transparent;
-}
-
-.menu .navbar-right li:last-child a::after {
-  content: "";
+  letter-spacing: 2px;
+  outline: none;
 }
 
 .menu .navbar-right li > a:focus,
 .menu .navbar-right li > a:hover {
-  color: #ee6a01;
+  color: #f36e3c;
 }
 
 .navbar-toggle {
@@ -589,19 +573,276 @@ p {
             box-shadow: none;
   }
   .menu .navbar-right li > a {
-    border-bottom: solid 1px #ee6a01;
+    border-bottom: solid 1px #f36e3c;
+    padding-top: 14px;
   }
-  .menu .navbar-right li:last-child a {
-    border-bottom: solid 0px transparent;
+}
+
+/* Small */
+@media (min-width: 768px) and (max-width: 991px) {
+  .menu .navbar-right li > a {
+    padding: 15px 5px;
   }
-  .menu .navbar-right li > a::after {
-    content: "";
+}
+
+/* Medium */
+/* Large */
+.faixa-home {
+  background: url(../images/faixa-home.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding-top: 80px;
+  padding-bottom: 10px;
+}
+
+#first {
+  background: url(../images/girasol_home_1.png) 0% 0 no-repeat fixed;
+  height: 900px;
+  margin: 0 auto;
+  padding: 0;
+  position: absolute;
+  top: 69px;
+  left: 0px;
+  width: 100%;
+  z-index: 200;
+}
+
+#second {
+  background: url(../images/girasol_home_2.png) 100% 0 no-repeat fixed;
+  height: 900px;
+  margin: 0 auto;
+  padding: 0;
+  position: absolute;
+  top: 69px;
+  left: 0px;
+  width: 100%;
+  z-index: 200;
+}
+
+.conceito {
+  background: url(../images/bg_video.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding-top: 50px;
+  padding-bottom: 80px;
+  position: relative;
+}
+
+.conceito .txt {
+  font-family: 'Helvetica Neue LT Std';
+  font-weight: 300;
+  font-style: normal;
+  color: #000000;
+  font-size: 17px;
+  line-height: 24px;
+  margin-bottom: 40px;
+}
+
+.conceito .tt {
+  font-family: 'Helvetica Neue LT Std';
+  font-weight: 900;
+  font-style: normal;
+  color: #000000;
+  font-size: 24px;
+  line-height: 44px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  margin-bottom: 40px;
+}
+
+.conceito .container {
+  z-index: 200;
+  position: relative;
+}
+
+.conceito .girasol_home_3 {
+  position: absolute;
+  bottom: -69%;
+  left: 0;
+}
+
+/* Extra Small */
+@media (max-width: 767px) {
+  .faixa-home {
+    background: url(../images/faixa-home-mobile.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding-top: 75px;
+    padding-bottom: 5px;
+  }
+  .faixa-home .logo-home {
+    max-width: 30%;
+  }
+  #first {
+    background: url(../images/girasol_home_1.png) 0% 0 no-repeat fixed;
+    background-size: 40%;
+    height: 300px;
+    top: 62px;
+  }
+  #second {
+    background: url(../images/girasol_home_2.png) 100% 0 no-repeat fixed;
+    background-size: 40%;
+    height: 300px;
+    top: 62px;
+  }
+  .conceito {
+    background: url(../images/bg_video_mobile.jpg) no-repeat;
+    background-position: top center;
+    background-size: cover;
+    padding-top: 30px;
+    padding-bottom: 40px;
+  }
+  .conceito .txt {
+    font-size: 15px;
+    line-height: 22px;
+    margin-bottom: 20px;
+  }
+  .conceito .tt {
+    font-size: 15px;
+    line-height: 44px;
+    letter-spacing: 3px;
+    margin-bottom: 20px;
+  }
+}
+
+/* Small */
+@media (min-width: 768px) and (max-width: 991px) {
+  .faixa-home {
+    background: url(../images/faixa-home-mobile.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding-top: 75px;
+    padding-bottom: 5px;
+  }
+  .faixa-home .logo-home {
+    max-width: 30%;
+  }
+  #first {
+    background: url(../images/girasol_home_1.png) 0% 0 no-repeat fixed;
+    background-size: 40%;
+    height: 300px;
+    top: 62px;
+  }
+  #second {
+    background: url(../images/girasol_home_2.png) 100% 0 no-repeat fixed;
+    background-size: 40%;
+    height: 300px;
+    top: 62px;
+  }
+  .conceito {
+    background: url(../images/bg_video_mobile.jpg) no-repeat;
+    background-position: top center;
+    background-size: cover;
+    padding-top: 30px;
+    padding-bottom: 40px;
+  }
+  .conceito .txt {
+    font-size: 15px;
+    line-height: 22px;
+    margin-bottom: 20px;
+  }
+  .conceito .tt {
+    font-size: 15px;
+    line-height: 44px;
+    letter-spacing: 3px;
+    margin-bottom: 20px;
+  }
+}
+
+/* Medium */
+/* Large */
+.localizacao {
+  background: url(../images/bg_localizacao.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.localizacao .tt {
+  font-family: 'Helvetica Neue LT Std';
+  font-weight: 300;
+  font-style: normal;
+  color: #000000;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 24px;
+  line-height: 34px;
+  margin-bottom: 30px;
+}
+
+.localizacao .tt span {
+  font-weight: 900;
+  font-style: normal;
+}
+
+.localizacao .txt {
+  font-family: 'Helvetica Neue LT Std';
+  font-weight: 300;
+  font-style: normal;
+  color: #000000;
+  font-size: 15px;
+  line-height: 25px;
+  margin-bottom: 40px;
+}
+
+.fotoAerea {
+  background: url(../images/bg_fotoAerea.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.fotoAerea .tt {
+  font-family: 'Helvetica Neue LT Std';
+  font-weight: 900;
+  font-style: normal;
+  color: #000000;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 24px;
+  line-height: 34px;
+  margin-bottom: 30px;
+}
+
+/* Extra Small */
+@media (max-width: 767px) {
+  .localizacao {
+    background: url(../images/bg_localizacao-mobile.jpg) no-repeat;
+    background-position: center center;
+    background-size: cover;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .localizacao .tt {
+    font-size: 24px;
+    line-height: 34px;
+    margin-bottom: 10px;
+  }
+  .localizacao .txt {
+    font-size: 15px;
+    line-height: 25px;
+    margin-bottom: 20px;
+  }
+  .fotoAerea {
+    background: #ffffff;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 }
 
 /* Small */
 /* Medium */
 /* Large */
+.terrenos {
+  background: url(../images/bg_terrenos.jpg) no-repeat;
+  background-position: top center;
+  background-size: cover;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
 /* Extra Small */
 /* Small */
 /* Medium */
