--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -114,6 +114,11 @@
     letter-spacing: 3px;
     margin-bottom: 20px;
   }
+  .conceito .girasol_home_3 {
+    position: absolute;
+    bottom: -30%;
+    left: 0;
+  }
 }
 
 /* Small */
