--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -120,6 +120,12 @@
             letter-spacing: 3px;
             margin-bottom: 20px;
         }
+
+        .girasol_home_3 {
+            position: absolute;
+            bottom: -30%;
+            left: 0;
+        }
     }
 }
 
