--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,17 +1,12 @@
-@import "fonts";                                                                 
-@import "base";                      
-@import "menu";              
+@import "fonts";
+@import "base";
+@import "menu";
 @import "home";
 @import "localizacao";
-@import "terrenos";                            
+@import "terrenos";
+@import "lazer";  
+@import "contato";
+@import "footer";
+@import "politica";
 
-                                        
-                                                                                                                  
-                                
-
-
-
-@import "contato";                         
-@import "footer";                                                           
-@import "politica";                                                                                                                                                                                                                                 
-            
+                                   
