--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,4 +1,79 @@
+footer {
+  position: relative;
+  width: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+footer figcaption {
+  font-family: 'Montserrat';
+  font-weight: 500;
+  font-style: normal;
+  color: #000;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+footer p {
+  font-family: 'Montserrat';
+  font-weight: 500;
+  font-style: normal;
+  color: #000;
+}
+
+footer figcaption {
+  font-size: 15px;
+  line-height: 15px;
+}
+
+footer p {
+  font-size: 11px;
+  line-height: 15px;
+}
+
+footer .navbar-nav {
+  margin-top: 20px;
+}
+
+footer .navbar-nav li {
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
+
+footer .navbar-nav li > a {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  font-family: 'Montserrat';
+  font-weight: 500;
+  font-style: normal;
+  color: #000;
+  font-size: 11px;
+  line-height: 11px;
+  border-right: 1px solid #000;
+}
+
+footer .navbar-nav li > a:focus,
+footer .navbar-nav li > a:hover {
+  text-decoration: underline;
+  background-color: transparent;
+}
+
+footer .navbar-nav li:last-child a {
+  border-right: 0px solid transparent;
+}
+
 /* Extra Small */
+@media (max-width: 767px) {
+  footer {
+    padding-top: 30px;
+    padding-bottom: 15px;
+  }
+  footer p {
+    font-size: 11px;
+    line-height: 15px;
+  }
+}
+
 /* Small */
 /* Medium */
 /* Large */
