--- a/assets/css/menu.scss
+++ b/assets/css/menu.scss
@@ -8,6 +8,9 @@
     border: 0px solid transparent;
     z-index: 300;
     border-radius: 0px;
+    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.24);
+    -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.24);
+    -moz-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.24);
 
     .navbar-brand {
         height: auto;
