--- a/assets/css/politica.scss
+++ b/assets/css/politica.scss
@@ -7,8 +7,8 @@
         padding-bottom: 0px;
 
         h3 {
-            font-family: 'Montserrat';
-            font-weight: bold;
+            font-family: 'Helvetica Neue LT Std';
+            font-weight: 900;
             font-style: normal;
             color: #000;
             text-transform: uppercase;
@@ -24,7 +24,7 @@
 
         p {
             font-family: 'Montserrat';
-            font-weight: normal;
+            font-weight: 500;
             font-style: normal;
             color: #000;
             font-size: 15px;
