--- a/assets/css/slick-theme.css
+++ b/assets/css/slick-theme.css
@@ -57,27 +57,25 @@
 .slick-prev,
 .slick-prev:hover,
 .slick-prev:focus {
-    width: 20px;
-    height: 37px;
-    top: 45%;
-    left: -30px;
-    background: url(../images/left.png) no-repeat rgba(0, 0, 0, 0.5);
+    width: 30px;
+    height: 50px;
+    top: 50%;
+    left: 0px;
+    background: url(../images/left.png) no-repeat;
     background-position: center center;
-    background-size: 50%;
-    border: 1px solid #fff;
+    background-size: cover;
     z-index: 5;
 }
 .slick-next,
 .slick-next:hover,
 .slick-next:focus {
-    width: 20px;
-    height: 37px;
-    top: 45%;
-    right: -30px;
-    background: url(../images/right.png) no-repeat rgba(0, 0, 0, 0.5);
+    width: 30px;
+    height: 50px;
+    top: 50%;
+    right: 0px;
+    background: url(../images/right.png) no-repeat;
     background-position: center center;
-    background-size: 50%;
-    border: 1px solid #fff;
+    background-size: cover;
 }
 
 /* Dots */
@@ -161,19 +159,4 @@
 .slick-dots li.slick-active button:before {
     opacity: 0.75;
     color: black;
-}
-
-/* Extra Small */
-
-@media (max-width: 767px) {
-    .slick-prev,
-    .slick-prev:hover,
-    .slick-prev:focus {
-        left: 10px;
-    }
-    .slick-next,
-    .slick-next:hover,
-    .slick-next:focus {
-        right: 10px;
-    }
 }
