--- a/assets/css/menu.scss
+++ b/assets/css/menu.scss
@@ -1,20 +1,32 @@
 .menu {
     width: 100%;
     position: fixed;
-    background-color: #ffffff;
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#d2bfc2+0,ffffff+35,ffffff+65,d2bfc2+100 */
+    background: #d2bfc2;
+    /* Old browsers */
+    background: -moz-linear-gradient(left, #d2bfc2 0%, #ffffff 35%, #ffffff 65%, #d2bfc2 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #d2bfc2 0%, #ffffff 35%, #ffffff 65%, #d2bfc2 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #d2bfc2 0%, #ffffff 35%, #ffffff 65%, #d2bfc2 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#d2bfc2', endColorstr='#d2bfc2', GradientType=1);
+    /* IE6-9 */
+
     border-color: transparent;
     min-height: auto;
     margin-bottom: 0px;
     border: 0px solid transparent;
-    z-index: 300;
+    z-index: 301;
     border-radius: 0px;
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.24);
     -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.24);
     -moz-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.24);
+    height: 69px;
 
     .navbar-brand {
         height: auto;
-        padding: 0 0 0 0;
+        padding: 15px 0 0 0;
     }
 
     .navbar-right {
@@ -53,20 +65,48 @@
     background-color: transparent;
 }
 
+.fases {
+    width: 100%;
+    position: fixed;
+    z-index: 300;
+    top: 69px;
+    background-color: #003366;
+    padding-top: 7px;
+    padding-bottom: 7px;
+
+    p {
+        font-size: 15px;
+        line-height: 15px;
+        color: #ffffff;
+        text-transform: uppercase;
+        font-family: 'Helvetica Neue LT Std';
+        font-weight: 900;
+        font-style: normal;
+        letter-spacing: 6px;
+    }
+}
+
 
 /* Extra Small */
 @media(max-width:767px) {
     .menu {
         padding-top: 0px;
         padding-bottom: 0px;
+        height: auto;
+
+        .navbar-header {
+            padding-bottom: 5px;
+        }
 
         .navbar-brand {
+            width: 80px;
+            position: absolute;
             height: auto;
-            padding: 7px 0 7px 0;
+            padding: 5px 0 0px 5px;
 
-            img {
-                width: 70%;
-            }
+            // img {
+            //     width: 50%;
+            // }
         }
 
         .navbar-right {
@@ -89,11 +129,30 @@
         }
     }
 
+    .fases {
+        top: 62px;
+
+        p {
+            font-size: 9px;
+            line-height: 12px;
+        }
+    }
+
 }
 
 /* Small */
 @media(min-width:768px) and (max-width:991px) {
     .menu {
+        .navbar-brand {
+            width: 80px;
+            position: absolute;
+            height: auto;
+            padding: 5px 0 0px 5px;
+
+            // img {
+            //     width: 50%;
+            // }
+        }
         .navbar-right li>a {
             padding: 15px 5px;
         }
@@ -101,7 +160,16 @@
 }
 
 /* Medium */
-@media(min-width:992px) and (max-width:1199px) {}
+@media(min-width:992px) and (max-width:1199px) {
+    .menu {
+        .navbar-brand {
+            width: 130px;
+            position: absolute;
+            height: auto;
+            padding: 5px 0 0px 5px;
+        }
+    }
+}
 
 /* Large */
 @media(min-width:1200px) {}
