--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -170,7 +170,7 @@ p {
     margin-bottom: 1px;
     padding: 10px 15px;
     text-transform: uppercase;
-    font-family: 'Gill Sans Std';
+    font-family: 'Proxima Nova Rg';
     font-weight: normal;
     font-style: normal;
     font-size: 12px;
@@ -187,26 +187,26 @@ p {
 .float-box .chat {
     background: url(../images/icone-chat.png) no-repeat right 10px center;
     background-color: rgba(0, 0, 0, 0);
-    background-color: #cd1418;
+    background-color: #f26722;
 }
 
 .float-box .phone {
     background: url(../images/icone-tel.png) no-repeat right 10px center;
     background-color: rgba(0, 0, 0, 0);
-    background-color: #cd1418;
+    background-color: #f26722;
     font-size: 18px;
 }
 
 .float-box .mail {
     background: url(../images/icone-mail.png) no-repeat right 10px center;
     background-color: rgba(0, 0, 0, 0);
-    background-color: #cd1418;
+    background-color: #f26722;
 }
 
 .float-box .whats {
     background: url(../images/icone-zap.png) no-repeat right 10px center;
     background-color: rgba(0, 0, 0, 0);
-    background-color: #cd1418;
+    background-color: #f26722;
 }
 
 .aviso {
