--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,152 +1,1 @@
-.menu {
-  width: 100%;
-  position: fixed;
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#d2bfc2+0,ffffff+35,ffffff+65,d2bfc2+100 */
-  background: #d2bfc2;
-  /* Old browsers */
-  /* FF3.6-15 */
-  /* Chrome10-25,Safari5.1-6 */
-  background: -webkit-gradient(linear, left top, right top, from(#d2bfc2), color-stop(35%, #ffffff), color-stop(65%, #ffffff), to(#d2bfc2));
-  background: linear-gradient(to right, #d2bfc2 0%, #ffffff 35%, #ffffff 65%, #d2bfc2 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#d2bfc2', endColorstr='#d2bfc2', GradientType=1);
-  /* IE6-9 */
-  border-color: transparent;
-  min-height: auto;
-  margin-bottom: 0px;
-  border: 0px solid transparent;
-  z-index: 301;
-  border-radius: 0px;
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.24);
-  -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.24);
-  -moz-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.24);
-  height: 69px;
-}
-
-.menu .navbar-brand {
-  height: auto;
-  padding: 15px 0 0 0;
-}
-
-.menu .navbar-right {
-  padding: 13px 0px;
-}
-
-.menu .navbar-right li > a {
-  font-size: 12px;
-  line-height: 12px;
-  color: #536a8e;
-  text-transform: uppercase;
-  font-family: 'Helvetica Neue LT Std';
-  font-weight: bold;
-  font-style: normal;
-  letter-spacing: 2px;
-  outline: none;
-}
-
-.menu .navbar-right li > a:focus,
-.menu .navbar-right li > a:hover {
-  color: #f36e3c;
-}
-
-.navbar-toggle {
-  margin-top: 15px;
-  margin-right: 15px;
-}
-
-.menu .navbar-toggle {
-  border-color: #fff;
-}
-
-.menu .navbar-toggle:focus,
-.menu .navbar-toggle:hover {
-  background-color: transparent;
-}
-
-.fases {
-  width: 100%;
-  position: fixed;
-  z-index: 300;
-  top: 69px;
-  background-color: #003366;
-  padding-top: 7px;
-  padding-bottom: 7px;
-}
-
-.fases p {
-  font-size: 15px;
-  line-height: 15px;
-  color: #ffffff;
-  text-transform: uppercase;
-  font-family: 'Helvetica Neue LT Std';
-  font-weight: 900;
-  font-style: normal;
-  letter-spacing: 6px;
-}
-
-/* Extra Small */
-@media (max-width: 767px) {
-  .menu {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    height: auto;
-  }
-  .menu .navbar-header {
-    padding-bottom: 5px;
-  }
-  .menu .navbar-brand {
-    width: 65px;
-    position: absolute;
-    height: auto;
-    padding: 5px 0 0px 5px;
-  }
-  .menu .navbar-right {
-    padding: 0px 15px;
-  }
-  .menu .navbar-nav {
-    margin: 0 -15px 7.5px;
-  }
-  .menu .navbar-collapse,
-  .menu .navbar-form {
-    border-color: transparent;
-    -webkit-box-shadow: none;
-            box-shadow: none;
-  }
-  .menu .navbar-right li > a {
-    border-bottom: solid 1px #f36e3c;
-    padding-top: 14px;
-  }
-  .fases {
-    top: 62px;
-  }
-  .fases p {
-    font-size: 9px;
-    line-height: 12px;
-  }
-}
-
-/* Small */
-@media (min-width: 768px) and (max-width: 991px) {
-  .menu .navbar-brand {
-    width: 80px;
-    position: absolute;
-    height: auto;
-    padding: 5px 0 0px 5px;
-  }
-  .menu .navbar-right li > a {
-    padding: 15px 5px;
-  }
-}
-
-/* Medium */
-@media (min-width: 992px) and (max-width: 1199px) {
-  .menu .navbar-brand {
-    width: 130px;
-    position: absolute;
-    height: auto;
-    padding: 5px 0 0px 5px;
-  }
-}
-
-/* Large */
-/*# sourceMappingURL=menu.css.map */
+.menu{width:100%;position:fixed;background:#d2bfc2;background:linear-gradient(to right, #d2bfc2 0%, #ffffff 35%, #ffffff 65%, #d2bfc2 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#d2bfc2", endColorstr="#d2bfc2", GradientType=1);border-color:transparent;min-height:auto;margin-bottom:0px;border:0px solid transparent;z-index:361;border-radius:0px;box-shadow:0px 0px 30px 0px rgba(0,0,0,.24);-webkit-box-shadow:0px 0px 30px 0px rgba(0,0,0,.24);-moz-box-shadow:0px 0px 30px 0px rgba(0,0,0,.24);height:69px}.menu .navbar-brand{height:auto;padding:15px 0 0 0}.menu .navbar-right{padding:13px 0px}.menu .navbar-right li>a{font-size:12px;line-height:12px;color:#536a8e;text-transform:uppercase;font-family:"Helvetica Neue LT Std";font-weight:bold;font-style:normal;letter-spacing:2px;outline:none}.menu .navbar-right li>a:focus,.menu .navbar-right li>a:hover{color:#f36e3c}.navbar-toggle{margin-top:15px;margin-right:15px}.menu .navbar-toggle{border-color:#fff}.menu .navbar-toggle:focus,.menu .navbar-toggle:hover{background-color:transparent}.fases{width:100%;position:fixed;z-index:350;top:69px;background-color:#036;padding-top:7px;padding-bottom:7px}.fases p{font-size:15px;line-height:15px;color:#fff;text-transform:uppercase;font-family:"Helvetica Neue LT Std";font-weight:900;font-style:normal;letter-spacing:6px}@media(max-width: 767px){.menu{padding-top:0px;padding-bottom:0px;height:auto}.menu .navbar-header{padding-bottom:5px}.menu .navbar-brand{width:65px;position:absolute;height:auto;padding:5px 0 0px 5px}.menu .navbar-right{padding:0px 15px}.menu .navbar-nav{margin:0 -15px 7.5px}.menu .navbar-collapse,.menu .navbar-form{border-color:transparent;box-shadow:none}.menu .navbar-right li>a{border-bottom:solid 1px #f36e3c;padding-top:14px}.fases{top:62px}.fases p{font-size:9px;line-height:12px}}@media(min-width: 768px)and (max-width: 991px){.menu .navbar-brand{width:80px;position:absolute;height:auto;padding:5px 0 0px 5px}.menu .navbar-right li>a{padding:15px 5px}}@media(min-width: 992px)and (max-width: 1199px){.menu .navbar-brand{width:130px;position:absolute;height:auto;padding:5px 0 0px 5px}}
