--- a/assets/css/contato.scss
+++ b/assets/css/contato.scss
@@ -120,6 +120,7 @@
         p {
             font-size: 11px;
             line-height: 21px;
+            letter-spacing: 3px;
         }
     }
 }
