--- a/assets/css/localizacao.scss
+++ b/assets/css/localizacao.scss
@@ -53,6 +53,24 @@
     }
 }
 
+.pontos-loc {
+    background: url(../images/bg_pontos.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+    p {
+        font-family: 'Helvetica Neue LT Std';
+        font-weight: 500;
+        font-style: normal;
+        color: #000000;
+        font-size: 1vw;
+        line-height: 25px;
+        margin-bottom: 50px;
+    }
+}
+
 
 
 /* Extra Small */
@@ -76,6 +94,17 @@
             margin-bottom: 20px;
         }
     }
+    .pontos-loc {
+        padding-top: 30px;
+        padding-bottom: 30px;
+
+        p {
+            font-size: 3vw;
+            line-height: 15px;
+            margin-bottom: 30px;
+        }
+    }
+    
     .fotoAerea {
         background: #ffffff;
         padding-top: 30px;
@@ -85,10 +114,22 @@
 }
 
 /* Small */
-@media(min-width:768px) and (max-width:991px) {}
+@media(min-width:768px) and (max-width:991px) {
+    .pontos-loc {
+        p {
+            font-size: 1.6vw;
+        }
+    }
+}
 
 /* Medium */
-@media(min-width:992px) and (max-width:1199px) {}
+@media(min-width:992px) and (max-width:1199px) {
+    .pontos-loc {
+        p {
+            font-size: 1.3vw;
+        }
+    }
+}
 
 /* Large */
 @media(min-width:1200px) {}
